fixed swagger  doc
